various translation fixes and bugfixes

--- a/src/assets/localization/en.json
+++ b/src/assets/localization/en.json
@@ -35,7 +35,7 @@
     "ONG-uri Organizatoare": "Organizing NGOs",
     "authorOfFizicaPovestita": "Author \"Fizica Povestită\" (Physics through Stories)",
     "typicalDay": "A typical day in an atypical camp",
-    "typicalDayDescription": "After breakfast, the morning programs start, which can be anything from a conference on quantum physics to pottery. After that, all participants spend their free time on the beach, reading, learning, practicing sports or just chatting with friends. In the mid-afternoon, the programs resume and last until dinner, followed by presentations and performances in the open-air amphitheater. The evening program also includes a review of the events for the following day and is usually followed by a movie, astronomical observations or a campfire.",
+    "typicalDayDescription": "After breakfast, the morning programs start, which can be anything the participant chooses from a conference on quantum physics to pottery. After that, all participants spend their free time on the beach, reading, learning, practicing sports or just chatting with friends. In the mid-afternoon, the programs resume and last until dinner, followed by presentations and performances in the open-air amphitheater. The evening program also includes a review of the events for the following day and is usually followed by a movie, astronomical observations or a campfire.",
     "findOutMore": "Find out more",
     "participationGuide": "Before you sign up it is extremely important to read our guides, these contains logistical information and the rules of the Academy.",
     "goToGuide": "Participation Guide",
@@ -77,6 +77,7 @@
     "continueGoogle": "Continue with Google",
     "continueFacebook": "Continue with Facebook",
     "or": "Or",
+    "forgotPasswordError": "The e-mail address is mandatory",
     "forgotPassword": "Forgot your password?",
     "clickHere": "Click Here",
     "register": "Register",
@@ -103,14 +104,14 @@
     "orgTeam5": "to ensure the participants have the most enjoyable experience at the academy. In this way, we can keep the participation cost low and open up the opportunity for a wider range of participants to attend the Academy.",
     "whoCan": "WHO CAN PARTICIPATE?",
     "whoCan1": "The academy is recommended for young people between the ages of 16 and 29. Those under the age of 16 can only participate accompanied by an adult. The accompanying adult assumes full responsibility for the behavior on the island, as well as for the safety of the person under the age of 16. Individuals over the age of 29 can participate by acknowledging that the program is designed for young people and that the entire framework in which the academy takes place is natural, with camping conditions.",
-    "whoCan2": "Anyone interested in participating must register online at www.atlantykron.org using a Facebook, Google, or a combination Email Password profile. Registration is only completed after receiving the acceptance email. Individuals who cannot present a valid acceptance email are not accepted into the academy registration procedure.",
+    "whoCan2": "Anyone interested in participating must register online at www.atlantykron.ro using a Facebook, Google, or a combination Email Password profile. Registration is only completed after receiving the acceptance email. Individuals who cannot present a valid acceptance email are not accepted into the academy registration procedure.",
     "security": "ISLAND SECURITY",
     "security1": "Ensuring a safe and relaxing period is the main priority of the academy coordinators. It is characteristic that, in addition to the dedicated island guards, the Border Police are constantly present on the island. In addition, each instructor, team leader, and program coordinator oversees all activities, supporting security teams.",
-    "security2": "To ensure everyone's security ",
+    "security2": "To ensure everyone's security presence on the island is only permitted to registered individuals who wear a visible bracelet.",
     "security2Bold": "access to the island is only allowed for registered individuals who wear a visible bracelet.",
     "security3": "On the first day, participant registration takes place in Cernavoda according to the official program. On any other day, it is the duty of participants to contact the registration team as soon as they arrive on the island.",
     "transport": "TRANSPORT",
-    "transport1": "Arrange with the organizers of the Academy to meet you and take you to the venue of the program. You can contact us at inscrieri@atlantykron.org.",
+    "transport1": "Arrange with the organizers of the Academy to meet you and take you to the venue of the program. You can contact us at inscrieri@atlantykron.org",
     "transport2": "Use the public transport system in Romania (see instructions):   ",
     "transport3": "From the airport, take a taxi to the North Train Station in Bucharest. The journey takes approximately 25 minutes and the price is around 16 € (Euros) or 55 RON (Romanian Leu).",
     "transport4": "From Bucharest's North Train Station, take a fast train to Cernavoda. This journey will take about two hours and will cost around 12 € or 42 RON.",
@@ -132,7 +133,7 @@
     "participants1": "One of the best parts of the Academy is the people you will meet. Always a friendly environment, you can be sure to make many new friends during the event. The main languages used are Romanian and English. An estimate would be that 50% of the participants speak English well, 25% intermediate, and 25% with some difficulty. If necessary, anyone is willing to lend a hand with translations. Of course, there are many opportunities to improve your knowledge of many other languages with the help of the wide variety of participants.",
     "aTypicalDayGuide": "A TYPICAL DAY",
     "aTypicalDayGuide1": "After breakfast, the morning programs start and last until lunchtime. After that, all participants spend their free time on the beach, reading, learning, practicing sports or just chatting with friends. In the mid-afternoon, the programs resume and last until dinner, followed by presentations and performances in the open-air amphitheater. The evening program also includes a review of the events for the following day and is usually followed by a movie or dance on board a boat.",
-    "ensureLogged": "Make sure you have an account and you are logged in to fill in the sign up form.",
+    "ensureLogged": "Make sure you have an account and you are logged in to fill in the sign up form. If you already have an account, please verify your e-mail address by clicking the link in the email we've sent you. Check both your inbox and spam folders.",
     "youCanLogIn": "You can log in/sign up",
     "here": "here",
     "allFieldsAreMandatory": "All fields are mandatory",
@@ -165,18 +166,18 @@
     "finish": "Submit",
     "rules1": " The Atlantykron Summer Academy aims to provide participants with a unique experience throughout the entire event. It offers a beautiful harmony with the natural environment, outdoor courses and workshops conducted by professionals who excel in their fields. ",
     "rules2": " In order for these things to be possible, it is necessary for all participants to adhere to a minimum set of rules, both to maintain a pleasant atmosphere and to ensure the safe conduct of the activities. Therefore, for participation in the Academy, all participants commit to the following: ",
-    "rules3bold": "to pre-registe",
-    "rules3": "to register in advance using the form on the website. Only those who have completed the form will be able to participate. (In exceptional cases, participants may be allowed to register after the deadline, but their admission to the Academy is still subject to program acceptance.); ",
+    "rules3bold": "to pre-register",
+    "rules3": " in advance using the form on the website. Only those who have completed the form will be able to participate. (In exceptional cases, participants may be allowed to register after the deadline, but their admission to the Academy is still subject to program acceptance.); ",
     "rules4bold": "to complete all the registration formalities",
     "rules4": "– to be present on the first day at Cernavoda for the meeting with the registration team or to contact the registration team as soon as possible upon arrival on the island; ",
-    "rules5bold": "to always visiblyt wear the bracelet",
+    "rules5bold": "to always visibly wear the bracelet",
     "rules5": "received upon arrival at the island for the whole duration of the Academy; ",
     "rules6": "to maintain an ",
     "rules6bold": "appropriate behavior towards instructors, guests, and organizers, ",
     "rules6cont": "understanding that all instructors, guests, and the entire organizing team volunteer their time and effort for the smooth running of the Academy; ",
     "rules7": "to maintain a respectful attitude",
-    "rules7bold": " towards all other participants. ",
-    "rules7cont": "to maintain the cleanliness across the entire area of the island",
+    "rules7bold": " towards all other participants; ",
+    "rules7cont": "to maintain the cleanliness across the entire area of the island;",
     "rules8bold": "to follow all guidance ",
     "rules8": "received from the organizers; ",
     "rules9bold": "to swim and build campfires only when given permission by the organizers; ",
@@ -196,5 +197,8 @@
     "rules20": "present",
     "rules20link": "the letter of consent",
     "rules20cont": "from the parents or legal guardian (if not accompanied by a parent or guardian). ",
-    "rules21": "to fully pay for the meal vouchers for the entire duration of the event. "
+    "rules21": "to fully pay for the meal vouchers for the entire duration of the event. ",
+    "verifyEmailHeader": "Please check your inbox and spam folders for the confirmation email.",
+    "verifyEmailSubHeader": "You've almost finished registering on the site. We are delighted for your willingness to participate in an unique adventure. Please verify your email address by clicking the link in the email we've sent you. Then continue to the registration form on the website.",
+    "successSignUp": "You've successfully signed up! Please wait for our e-mail approval."
 }
