--- a/src/assets/localization/ro.json
+++ b/src/assets/localization/ro.json
@@ -78,6 +78,7 @@
     "continueGoogle": "Continuă cu Google",
     "continueFacebook": "Continuă cu Facebook",
     "or": "Sau",
+    "forgotPasswordError": "Adresa e-mail este obligatorie",
     "forgotPassword": "Ai uitat parola?",
     "clickHere": "Click Aici",
     "register": "Înregistrare",
@@ -103,22 +104,22 @@
     "orgTeam5": "pentru a le asigura participantilor o experienta cat mai placuta in cadrul Academiei. In acest fel putem mentine un cost scazut de participare si deschide oportunitatea de a participa in cadrul Academiei unei categorii cat mai largi de participanti.",
     "whoCan": "CINE POATE PARTICIPA?",
     "whoCan1": "Academia este recomandată tinerilor cu vârsta între 16 și 29 de ani. Persoanele mai tinere de 16 ani pot participa doar însoțite de un adult. Adultul insotitor isi asuma intreaga responsabilitatea atat pentru comportamentul pe insula, cat si pentru pastrarea in siguranta a persoanei sub 16 ani. Persoanele cu vârsta de peste 29 de ani pot participa asumându-și faptul că programul este construit pentru tineri și că tot cadrul în care se desfășoară Academia este unul natural, condițiile fiind unele de camping.",
-    "whoCan2": "Oricine este interesat să participe trebuie să se înregistreze online pe adresa www.atlantykron.org folosind un profil de Facebook, Google sau o combinatie Email Parola. Inscrierea este finalizata doar dupa receptionarea emailului de acceptare. Persoanele care nu pot prezenta un email valid de acceptare nu sunt acceptate in procedura de inregistrare a Academiei.",
+    "whoCan2": "Oricine este interesat să participe trebuie să se înregistreze online pe adresa www.atlantykron.ro folosind un profil de Facebook, Google sau o combinatie Email Parola. Inscrierea este finalizata doar dupa receptionarea emailului de acceptare. Persoanele care nu pot prezenta un email valid de acceptare nu sunt acceptate in procedura de inregistrare a Academiei.",
     "security": "SECURITATEA INSULEI",
     "security1": "Asigurarea unei perioade sigure şi relaxante este prioritatea principală a coordonatorilor Academiei. Caracteristic este faptul că, pe lângă paznicii devotaţi de pe insulă, Poliţia de Frontieră este în permanenţă prezentă pe insulă. În plus, fiecare instructor, lider de echipă şi coordonator de programe supraveghează toate activităţile, sprijinind echipele de securitate.",
     "security2": "Pentru siguranta noastra, a tuturor, prezenta pe insula este permisa doar persoanelor inregistrate si care poarta bratara intr-un loc vizibil. ",
     "security3": "In prima zi inregistrarea participantilor se face la Cernavoda, conform programului oficial. In orice alta zi, este indatorirea participantilor sa contacteze echipa de inregistrare in cel mai scurt timp de la sosirea pe insula.",
     "transport": "TRANSPORT",
-    "transport1": "Aranjaţi cu organizatorii Academiei să vă întâlnească şi să vă conducă la locul de desfăşurare al programului. Ne puteţi contacta la inscrieri@atlantykron.org.",
+    "transport1": "Aranjaţi cu organizatorii Academiei să vă întâlnească şi să vă conducă la locul de desfăşurare al programului. Ne puteţi contacta la inscrieri@atlantykron.org",
     "transport2": "Folosiţi sistemul public de transport din România (vezi instrucţiunile):",
     "transport3": "De la aeroport luaţi un taxi până la Gara de Nord din Bucureşti. Durata călătoriei este de aproximativ 25 de minute iar preţul în jur de 16 € (Euro) sau 55 RON",
     "transport4": " De la Gara de Nord din Bucureşti, luaţi un tren rapid către Cernavodă. Această călătorie va dura circa două ore şi va costa cam 12 € sau 42 RON. ",
     "transport5": " De la gara Cernavodă trebuie să ajungeţi în satul Capidava, pentru care există două opţiuni: luaţi autobuzul care pleacă de două ori pe zi, la 11:30 şi la 15:30, sau un taxi pentru a parcurge ultimele 25 de minute până în sat. ",
     "transport6": " Din sat se merge puţin pe jos şi faceţi un drum scurt cu barca până la insula Academiei, vizibilă în mijlocul fluviului Dunărea ",
     "transport7": "Din interiorul României: Luaţi trenul sau taxiul până în oraşul Cernavodă, gara cea mai apropiată de Academie, apoi urmaţi paşii 2 şi 3 de mai sus.",
-    "transport8": "Cu automobilul personal: Se poate ajunge cu automobilul până în apropierea insulei, dar acest lucru nu este încurajat. Deoarece este un loc sălbatic, Academia nu poate răspunde pentru pierderile şi daunele care se pot întâmpla în locurile de parcare din afara insulei",
+    "transport8": "Cu automobilul personal: Se poate ajunge cu automobilul până în apropierea insulei, dar acest lucru nu este încurajat. Deoarece este un loc sălbatic, Academia nu poate răspunde pentru pierderile şi daunele care se pot întâmpla în locurile de parcare din afara insulei.",
     "rustic": "SUNTEM „RUSTICI”",
-    "rustic1": "Participarea la acest program într-un decor sălbatic e o parte din ceea ce face ca Academia să fie o experienţă specială de viaţă şi de educaţie. Este de asemenea important să înţelegeţi care sunt condiţiile. Ceea ce urmează oferă nişte date generale. Dacă aveţi întrebări, vă rugăm contactaţi-ne la",
+    "rustic1": "Participarea la acest program într-un decor sălbatic e o parte din ceea ce face ca Academia să fie o experienţă specială de viaţă şi de educaţie. Este de asemenea important să înţelegeţi care sunt condiţiile. Ceea ce urmează oferă nişte date generale. Dacă aveţi întrebări, vă rugăm contactaţi-ne la ",
     "foodAndHygiene": "HRANĂ ŞI IGIENĂ",
     "foodAndHygiene1": "Masa este disponibilă din partea Academiei de două ori pe zi. Vezi formularul de înscriere pentru detaliile legate de preţ. În plus, există o cafenea în aer liber instalată pe insulă, deschisă zilnic între 07:00 şi 24:00, unde se pot cumpăra alimente, băuturi şi alte mărfuri.",
     "foodAndHygiene2": "De asemenea, se asigură apă îmbuteliată pentru toţi participanţii. Deşi apa locală este sigură pentru spălat, este important să vă aduceţi aminte că nu este bună de băut. În anumite locuri de pe insulă sau pe bacuri sunt disponibile duşuri.",
@@ -131,7 +132,7 @@
     "participants1": "Una dintre cele mai bune părţi ale Academiei sunt oamenii pe care-i veţi cunoaşte. Mereu un mediu prietenos, puteţi fi siguri că vă veţi face mulţi noi prieteni în timpul evenimentului. Principalele limbi folosite sunt româna şi engleza. O estimare ar fi că 50% dintre participanţi vorbesc bine engleza, 25% mediu şi 25% cu oarecare dificultăţi. Dacă este nevoie, oricine este dispus să dea o mână de ajutor la traduceri. Desigur, există multe ocazii de a-ţi perfecţiona cunoştinţele în multe alte limbi cu ajutorul marii varietăţi de participanţi.",
     "aTypicalDayGuide": "O ZI TIPICĂ",
     "aTypicalDayGuide1": "După micul dejun încep programele de dimineaţă, care durează până la masa se prânz. După aceea toţi participanţii îşi petrec timpul liber pe plajă, citind, învăţând, practicând sporturi sau doar vorbind cu prietenii. La mijlocul după-amiezii reîncep programele, care ţin până la cină, apoi au loc prezentările şi spectacolele în amfiteatrul în aer liber. Programul de seară mai include o trecere în revistă a evenimentelor zilei următoare şi este urmat de obicei de un film sau dans la bordul unui bac.",
-    "ensureLogged": "Asigură-te că ai un cont și ești logat pe site pentru a completa formularul.",
+    "ensureLogged": "Asigură-te că ai un cont și ești logat pe site pentru a completa formularul. Dacă ai deja un cont, te rugăm să confirmi adresa de e-mail printr-un click pe linkul din e-mailul trimis de noi la crearea unui cont. Te rugăm să verifici inbox-ul și folder-ul spam.",
     "youCanLogIn": "Te poți loga/înregistra",
     "here": "aici",
     "allFieldsAreMandatory": "Toate câmpurile sunt obligatorii",
@@ -195,5 +196,8 @@
     "rules20": "să prezinte",
     "rules20link": "scrisoarea de consimțământ",
     "rules20cont": "din partea părinților sau a tutorelui legal (daca nu sunt insotiti de parinte sau tutore). ",
-    "rules21": " să achite integral bonurile de masă, pentru întreaga perioadă a evenimentului. "
+    "rules21": " să achite integral bonurile de masă, pentru întreaga perioadă a evenimentului. ",
+    "verifyEmailHeader": "Verifică inbox-ul și folder-ul spam pentru emailul de confirmare",
+    "verifyEmailSubHeader": "Aproape ai terminat procesul de înregistrare pe site. Suntem entuziasmați de dorința ta de a participa într-o aventură unică. Mai sunt câțiva pași până la terminarea procesului de înscriere. Te rugăm să îți verifici adresa de e-mail pentru a confirma contul tău, apoi te rugăm să completezi formularul de înregistrare.",
+    "successSignUp": "Te-ai înregistrat cu succes, te rugăm să aștepți e-mailul nostru de aprobare."
 }
