--- a/src/assets/localization/en.json
+++ b/src/assets/localization/en.json
@@ -1,6 +1,6 @@
 {
     "callToAction": "Join the Adventure",
-    "editionNumber": "34th Edition",
+    "editionNumber": "Welcome to the summer academy - 34th Edition",
     "dates": "28 Iulie - 4 August 2023",
     "home": "Home",
     "guests": "Guests",
@@ -11,7 +11,7 @@
     "organizers": "Organizers",
     "signUp": "Sign Up",
     "whatIsAtlantykron": "What's Atlantykron?",
-    "shortDescription": "Atlantykron is an educational and unconventional summer camp. Since 1989 \"Stone Ring Island\" transforms into a special and almost magical place for a few days every summer. Hundreds of young people and professors from all over the world gather on the island. During this time, the participants meet, interact and learn alongside scientists, artists, writers and other famous professionals. The Academy continues to change the lives of its participants.",
+    "shortDescription": "Atlantykron is an educational and unconventional summer camp for young people aged 15 to 26. Since 1989 \"Stone Ring Island\" transforms into a special and almost magical place for a few days every summer. Hundreds of young people and professors from all over the world gather on the island. During this time, the participants meet, interact and learn alongside scientists, artists, writers and other famous professionals. The Academy continues to change the lives of its participants.",
     "science": "Science",
     "scienceDescription": "From face to face discussions with astronauts to treasure hunts using radios, the camp offers unique opportunities for all ages",
     "art": "Art",
@@ -200,5 +200,7 @@
     "rules21": "to fully pay for the meal vouchers for the entire duration of the event. ",
     "verifyEmailHeader": "Please check your inbox and spam folders for the confirmation email.",
     "verifyEmailSubHeader": "You've almost finished registering on the site. We are delighted for your willingness to participate in an unique adventure. Please verify your email address by clicking the link in the email we've sent you. Then continue to the registration form on the website.",
-    "successSignUp": "You've successfully signed up! Please wait for our e-mail approval."
+    "successSignUp": "You've successfully signed up! Please wait for our e-mail approval.",
+    "oldAtlantykron": "Old Site",
+    "archiveAtlantykron": "Archive"
 }
