--- a/src/assets/localization/en.json
+++ b/src/assets/localization/en.json
@@ -1,6 +1,6 @@
 {
     "callToAction": "Join the Adventure",
-    "editionNumber": "Welcome to the summer academy - 34th Edition",
+    "editionNumber": "Connecting minds, creating the future - 34th Edition",
     "dates": "28 Iulie - 4 August 2023",
     "home": "Home",
     "guests": "Guests",
@@ -74,6 +74,7 @@
     "password": "*Password",
     "login": "Login",
     "emailOrPasswordWrong": "E-mail address or password is wrong",
+    "passwordsDontMatchError": "Passwords don't match",
     "continueGoogle": "Continue with Google",
     "continueFacebook": "Continue with Facebook",
     "or": "Or",
@@ -109,7 +110,7 @@
     "security1": "Ensuring a safe and relaxing period is the main priority of the academy coordinators. It is characteristic that, in addition to the dedicated island guards, the Border Police are constantly present on the island. In addition, each instructor, team leader, and program coordinator oversees all activities, supporting security teams.",
     "security2": "To ensure everyone's security presence on the island is only permitted to registered individuals who wear a visible bracelet.",
     "security2Bold": "access to the island is only allowed for registered individuals who wear a visible bracelet.",
-    "security3": "On the first day, participant registration takes place in Cernavoda according to the official program. On any other day, it is the duty of participants to contact the registration team as soon as they arrive on the island.",
+    "security3": "Before organizing the event, all state authorities are notified, including the Ministry of Health, the Ministry of Internal Affairs, the County Prefecture of Constanța, and the Municipalities of the two communities - Cernavodă and Topalu. Together with these authorities, specific measures for such events are established, and all necessary permits are obtained. For a period of 10 days, 24 hours a day, the island is staffed with a medical team consisting of 6 members, Border Police, as well as a private security company, to ensure the complete security of the participants. The organizers and all those involved in the participants' security zone communicate with each other through a closed-circuit radio system to minimize response time in case of emergencies. This is the detailed system according to which the academy operates.",
     "transport": "TRANSPORT",
     "transport1": "Arrange with the organizers of the Academy to meet you and take you to the venue of the program. You can contact us at inscrieri@atlantykron.org",
     "transport2": "Use the public transport system in Romania (see instructions):   ",
@@ -200,10 +201,20 @@
     "rules21": "to fully pay for the meal vouchers for the entire duration of the event. ",
     "verifyEmailHeader": "Please check your inbox and spam folders for the confirmation email.",
     "verifyEmailSubHeader": "You've almost finished registering on the site. We are delighted for your willingness to participate in an unique adventure. Please verify your email address by clicking the link in the email we've sent you. Then continue to the registration form on the website.",
-    "successSignUp": "You've successfully signed up! Please wait for our e-mail approval.",
+    "successSignUp": "You've successfully signed up! We will review your application, please wait for our e-mail approval.",
     "oldAtlantykron": "Old Site",
     "archiveAtlantykron": "Archive",
     "mainOrganizer": "Main Organizer",
     "inPartnershipWith": "In Partnership With",
-    "collaborators": "Collaborators"
+    "collaborators": "Collaborators",
+    "contactInfo": "The best way to contact us is to send an email to contact@atlantkyron.org",
+    "about": "About",
+    "history1": "Atlantykron Academy is a summer school organized in nature and dedicated to knowledge. For ten days a year, on a wild island in the middle of the Danube, the size of a football stadium, which becomes welcoming only during this period, we bring high-performance technologies, renowned lecturers, and virtually invite specialists from around the world to share their experiences through teleconferences. The activities during the Atlantykron Academy cover a wide range, from science and culture to art and sports. Over 30 interesting activities take place here, 24 hours a day. Over time, more than 10,000 young people and guests have visited this island, learning from each other.",
+    "historySubtitle": "History and Tradition",
+    "history2": "In 1990, a small group of science fiction enthusiasts chose this remote island as an ideal, albeit wild, location for the annual science fiction festival, which offered them the opportunity to study and learn from each other. Time passed, conditions changed, but the thirst for knowledge and new experiences remained. After 10 years, the festival transformed into a Summer School. The tradition continued, with the support of the government and non-governmental organizations from around the world.",
+    "history3": "Over time, more than 10,000 guests, participants, and organizers have visited this island. Since 1990, Atlantykron has been under the auspices of the Ministry of Youth and Sports and has consistently received support and assistance from several government agencies (such as the Ministry of Agriculture through ANIF, the National Forestry Directorate), local authorities such as the Cernavoda City Hall, as well as local businesses.",
+    "history4": "Some of the most significant years for Atlantykron Academy include 1999 when the edition was dedicated to the total solar eclipse, 2001 when the island hosted Eurocon, the European Science Fiction Convention, and 2019 when the Academy celebrated its 30th anniversary. Over the years, Atlantykron Academy has hosted numerous personalities, including astronaut Dumitru Prunariu, science fiction writers Norman Spinrad (President of the Science Fiction and Fantasy Writers of America at that time), Joe Haldeman, Robert Sheckley, Alain LeBussy, Ion Hobana, astronomer Harald Alexandrescu, artists Ioan Gyury Pascu, Cristian Grețcu, the Barock band, geneticist Jonathan Cowie, Bridget Willkinson (President of the European Science Fiction Society), biologist Alexandru Ecovoiu, Gheorghe Fodoreanu (former president of the National Association of Travel Agencies), Peter Moon (American writer), pan flutist Nicolae Voiculeț, and many others.",
+    "history5": "In 2014, the Atlantykron organizing team, in partnership with Innovation Travel and the National Tourism Authority, organized the conference \"The Danube, Romania's Touristic Treasure,\" which brought together over 300 participants and guests. On the day of the conference, pan flutist Nicolae Voiculeț held a memorable concert.",
+    "history6": "In 2015, Atlantykron Academy received well-deserved honors for its 25 years of activity celebrated in 2014, including a nomination at the Foreign Policy magazine Gala in the research section, alongside the \"Horia Hulubei\" Institute of Physics and Nuclear Engineering, all the winners of the Ad Astra 2014 awards, and a series of remarkable Romanian researchers from both Romania and abroad. It was also nominated by Radio Romania Cultural in the \"Education and Teaching\" category.",
+    "history7": "Atlantykron is a wild island, a place that only experiences fireworks, electricity, high-speed internet for virtual conferences - a science fiction idea in the early editions of the 1990s - large screens projecting premiere images from Mars, and last but not least, conferences held by specialists in the fields of science, culture, art, and communication."
 }
