--- a/src/assets/localization/ro.json
+++ b/src/assets/localization/ro.json
@@ -1,6 +1,6 @@
 {
     "callToAction": "Înscrie-te în Aventură",
-    "editionNumber": "Bun venit în academia de vară - Ediția 34",
+    "editionNumber": "Connecting minds, creating the future - Ediția 34",
     "dates": "28 Iulie - 4 August 2023",
     "home": "Acasă",
     "guests": "Invitați",
@@ -75,6 +75,7 @@
     "password": "*Parolă",
     "login": "Logare",
     "emailOrPasswordWrong": "Adresa email sau parola este greșită",
+    "passwordsDontMatchError": "Parolele nu se potrivesc",
     "continueGoogle": "Continuă cu Google",
     "continueFacebook": "Continuă cu Facebook",
     "or": "Sau",
@@ -108,7 +109,7 @@
     "security": "SECURITATEA INSULEI",
     "security1": "Asigurarea unei perioade sigure şi relaxante este prioritatea principală a coordonatorilor Academiei. Caracteristic este faptul că, pe lângă paznicii devotaţi de pe insulă, Poliţia de Frontieră este în permanenţă prezentă pe insulă. În plus, fiecare instructor, lider de echipă şi coordonator de programe supraveghează toate activităţile, sprijinind echipele de securitate.",
     "security2": "Pentru siguranta noastra, a tuturor, prezenta pe insula este permisa doar persoanelor inregistrate si care poarta bratara intr-un loc vizibil. ",
-    "security3": "In prima zi inregistrarea participantilor se face la Cernavoda, conform programului oficial. In orice alta zi, este indatorirea participantilor sa contacteze echipa de inregistrare in cel mai scurt timp de la sosirea pe insula.",
+    "security3": "Înainte de organizarea evenimentului sunt notificate toate autorităţile statului, respectiv Ministerul Sănătăţii, Ministerul Afacerilor Interne, Prefectura Judeţului Constanţa şi Primăriile celor două comunităţi – Cernavodă şi Topalu, împreună cu care se dispun măsurile specifice pentru astfel de evenimente şi se obţin toate autorizaţiile necesare. Timp de 10 zile, 24 de ore pe zi, pe insulă se află o echipă medicală formată din 6 membri, Poliţia de frontieră, precum şi o firmă privată de pază şi protecţie, pentru a asigura securitatea deplină a participanţilor. Organizatorii şi toţi cei implicaţi în zona de securitate a participanţilor comunică între ei prin sistemul radio cu circuit închis pentru a minimiza timpul de intervenţie în cazul urgenţelor“, este detaliat sistemul după care funcţionează academia.",
     "transport": "TRANSPORT",
     "transport1": "Aranjaţi cu organizatorii Academiei să vă întâlnească şi să vă conducă la locul de desfăşurare al programului. Ne puteţi contacta la inscrieri@atlantykron.org",
     "transport2": "Folosiţi sistemul public de transport din România (vezi instrucţiunile):",
@@ -199,10 +200,20 @@
     "rules21": " să achite integral bonurile de masă, pentru întreaga perioadă a evenimentului. ",
     "verifyEmailHeader": "Verifică inbox-ul și folder-ul spam pentru emailul de confirmare",
     "verifyEmailSubHeader": "Aproape ai terminat procesul de înregistrare pe site. Suntem entuziasmați de dorința ta de a participa într-o aventură unică. Mai sunt câțiva pași până la terminarea procesului de înscriere. Te rugăm să îți verifici adresa de e-mail pentru a confirma contul tău, apoi te rugăm să completezi formularul de înregistrare.",
-    "successSignUp": "Te-ai înregistrat cu succes, te rugăm să aștepți e-mailul nostru de aprobare.",
+    "successSignUp": "Te-ai înregistrat cu succes, o să verificăm aplicația ta și te rugăm să aștepți e-mailul nostru de aprobare.",
     "oldAtlantykron": "Site Vechi",
     "archiveAtlantykron": "Arhivă",
     "mainOrganizer": "Organizator Principal",
     "inPartnershipWith": "În parteneriat cu",
-    "collaborators": "Colaboratori"
+    "collaborators": "Colaboratori",
+    "contactInfo": "Cel mai rapid mod de a ne contacta este să trimiți un e-mail la contact@atlantkyron.org",
+    "about": "Despre noi",
+    "history1": "Academia Atlantykron reprezintă o şcoală de vară, organizată în natură şi dedicată cunoaşterii. Pentru zece zile pe an, pe un ostrov sălbatic în mijlocul Dunării, de mărimea unui stadion de fotbal, care devine prietenos doar în această perioadă, aducem tehnologii de înaltă performanţă, lectori de marcă, invităm virtual, prin teleconferinţe, specialişti din întreaga lume să ne împărtăşească din experienţa lor. Activităţile din timpul Academiei Atlantykron acoperă un palier larg, pornind de la ştiinţă şi cultură până la artă şi sport. Aici au loc peste 30 de activităţi interesante, 24 de ore din 24. De-a lungul timpului, pe această insulă au trecut peste 10.000 de tineri şi invitaţi, care au învăţat reciproc, unii de la alţii.",
+    "historySubtitle": "Istorie şi tradiţie",
+    "history2": "În 1990, un mic grup de tineri iubitori de science fiction a ales această insulă îndepărtată drept un loc ideal, deşi sălbatic, unde să se desfăşoare festivalul anual de science fiction, ocazie care le oferea şansa să studieze şi să înveţe unii de la ceilalţi. Timpul a trecut, condiţiile s-au schimbat, dar setea de cunoaştere şi de experienţe noi a rămas. După 10 ani, festivalul s-a transformat într-o Şcoală de Vară. Tradiţia a continuat, având în fiecare an sprijinul Guvernului şi al unor organizaţii neguvernamentale din întreaga lume.",
+    "history3": "De-a lungul timpului, pe această insulă au trecut peste 10.000 de invitaţi, participanţi, organizatori. Începând din 1990, Atlantykron s-a aflat sub tutela Ministerului Tineretului şi Sportului şi a primit permanent sprijin şi susţinere din partea mai multor Agenţii Guvernamentale (Ministerul Agriculturii prin ANIF, Regia Natională a Pădurilor), din partea autorităţilor locale – Primăria Cernavoda, dar și cu ajutorul agenţilor economici locali.",
+    "history4": "Printre cei mai importanţi ani ai Academiei Atlantykron s-au numărat 1999, când ediţia a fost dedicată Eclipsei totale de soare, 2001 – când insula a găzduit Eurocon, Convenţia Europeană de Science Fiction şi 2019 – când Academia a aniversat 30  de ani de existenţă. Academia Atlantykron a găzduit, de-a lungul anilor, numeroase personalităţi, precum astronautul Dumitru Prunariu, scriitori de SF Norman Spinrad (preşedintele Societăţii Scriitorilor de SF şi Fantasy din SUA la acea vreme), Joe Haldeman, Robert Sheckley, Alain LeBussy, Ion Hobana, astronomul Harald Alexandrescu, artiştii Ioan Gyury Pascu, Cristian Greţcu, formaţia Barock, geneticianul Jonathan Cowie, Bridget Willkinson (Preşedinte al Societăţii Europene de SF), biologul Alexandru Ecovoiu, Gheorghe Fodoreanu (fost preşedinte al Asociaţiei Naţionale a Agenţiilor de Turism), Peter Moon (scriitor american), naistul Nicolae Voiculeţ etc.",
+    "history5": "În 2014, echipa de organizare Atlantykron a organizat, în parteneriat cu Innovation Travel şi cu Autoritatea Naţională pentru Turism, conferinţa „Dunărea, comoara turistică a României“, care a reunit peste 300 de participanţi şi invitaţi. În ziua conferinţei, naistul Nicolae Voiculeţ a susţinut un concert memorabil.",
+    "history6": "În 2015, Academia Atlantykron a primit, pentru cei 25 de ani de activitate aniversaţi în 2014, câteva distincţii bine meritate, precum nominalizarea acordată la Gala revistei Foreign Policy la sectiunea cercetare alături de Institutul de Fizică şi Inginerie Nucleară „Horia Hulubei“, toţi laureaţii premiilor Ad Astra 2014 şi o serie de cercetători români remarcabili din ţară şi străinătate precum şi nominalizarea acordată de Radio România Cultural la secţiunea „Educaţie şi învăţământ“.",
+    "history7": "Atlantykron este o insulă sălbatică, un loc care doar pentru zece zile pe an are parte de focuri de artificii, conectare la electricitate, Internet de mare viteză pentru conferinţele virtuale – idee science fiction la primele ediţii din anii 90 -, ecrane mari pe care sunt proiectate imagini în premieră de pe Marte şi, nu în ultimul rând, conferinţele susţinute de specialişti din domeniile ştiinţei, culturii, artei şi comunicării."
 }
